Fix users list layout bug.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -28,6 +28,11 @@
   background-color: #00c8b3;
   color: #ffffff;
 
+  &:not(:disabled):hover {
+    opacity: 0.7;
+    cursor: pointer;
+  }
+
   &:disabled {
     color: #dddcdc;
     background-color: #f6f6f6;
@@ -182,7 +187,7 @@ html, body {
     height: 50%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
   }
 }
 
